frame/support/test/tests/pallet_ui/storage_multiple_pov_estimation.stderr
error: Invalid attribute: Duplicate attribute
  --> tests/pallet_ui/storage_multiple_pov_estimation.rs:16:3
   |
16 |     #[pallet::pov_estimation = MaxEncodedLen]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
